# riscv-tests

./: .gitignore  .gitmodules  Makefile  Makefile.in  README.md  config.in  configure  configure.ac  encoding.h  hwacha_xcpt.h  test_command_line_switch.py  test_ignore_list.py
.github/workflows/: build.yml  debug.yml  spike-openocd-tests.yml  spike-tests.yml
benchmarks/: Makefile  readme.txt
benchmarks/common/: crt-mt.S  crt.S  syscalls.S  syscalls.c  test-mt.ld  test.ld  util.h
benchmarks/coremark/: core_main.c  core_portme.c  core_portme.h  ee_printf.c
benchmarks/dgemm/: bmark.mk  dataset1.h  dgemm_gendata.scala  dgemm_main.c
benchmarks/dhrystone/: bmark.mk  dhrystone.c  dhrystone.h  dhrystone_main.c
benchmarks/dhrystone.d/: dhrystone.h  dhrystone_main.c
benchmarks/dma-memcpy/: bmark.mk  dma-ext.h  dma_memcpy.c  dma_memcpy.h  dma_memcpy_main.c
benchmarks/empty/: bmark.mk  empty_main.c
benchmarks/ioexample/: bmark.mk  ioexample_main.c
benchmarks/median/: bmark.mk  dataset1.h  median.c  median.h  median_main.c
benchmarks/median.d/: bmark.mk
benchmarks/memcpy/: bmark.mk  memcpy.c  memcpy.h  memcpy_main.c
benchmarks/mm.d/: mm_main.c
debug/: Makefile  README.md  excluded.yaml.example  gdbserver.py  hifive1_excludes.yaml  openocd.py  pylint.rc  rbb_daisychain.py  requirements.txt  targets.py  test  testlib.py
isa/: Makefile
mt/: Makefile  av_matmul.c  ay_matmul.c  az_matmul.c  br_matmul.c  cv_matmul.c  cy_matmul.c  dr_matmul.c
p/: link.ld  riscv_test.h
pm/: riscv_test.h
pt/: riscv_test.h
v/: entry.S  link.ld  riscv_test.h  string.c  vm.c
(+1601 files in other folders)
